--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,3 +11,7 @@ dotenv = "0.15.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_with = {version = "3.9.0", features = ["chrono"] }
 chrono = "0.4.37"
+argon2 = "0.5.3"
+rand = "0.8.5"
+jsonwebtoken = "9.3.0"
+lettre = "0.11.8"
